service-build.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Service
metadata:
  name: knative-build-demo
  namespace: default
spec:
  runLatest:
    configuration:
      build:
        serviceAccountName: build-bot-gcr
        source:
          git:
            url: https://github.com/dgageot/hello.git
            revision: master
        template:
          name: kaniko
          arguments:
          - name: IMAGE
            value: gcr.io/fe-rajain/hello-nginx:latest
      revisionTemplate:
        spec:
          container:
            image: gcr.io/fe-rajain/hello-nginx:latest
