blue-green-demo-route-v3.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo # The name of our route; appears in the URL to access the app
  namespace: default # The namespace we're working in; also appears in the URL to access the app
spec:
  traffic:
    - revisionName: blue-green-demo-76vs7
      percent: 50 # 50% traffic goes to this revision
      name: v2 # A named route

    - revisionName: blue-green-demo-z68ng
      percent: 50 # 50% traffic goes to this revision  
      name: v1 # A named route
